# FantasticGradientBoosting

./: .gitmodules  CMakeLists.txt  README.md  analyse.py  config.json  experiment.py  gradient_boosting_app.cpp
experiments/higgs/: sample.csv
gradient_boosting/: GradientBoosting.cpp  GradientBoosting.h
gradient_boosting/binarization/: BinCreator.cpp  BinCreator.h  BinCreatorByAbsoluteValue.cpp  BinCreatorByAbsoluteValue.h  BinCreatorByStatistics.cpp  BinCreatorByStatistics.h  ThresholdContainer.cpp  ThresholdContainer.h  ThresholdCreator.cpp  ThresholdCreator.h  ThresholdCreatorByStatistics.cpp  ThresholdCreatorByStatistics.h  ThresholdCreatorByValue.cpp  ThresholdCreatorByValue.h
gradient_boosting/categories/: CategoricalContainer.cpp  CategoricalContainer.h  CategoricalConverter.cpp  CategoricalConverter.h
gradient_boosting/config/: GradientBoostingConfig.cpp  GradientBoostingConfig.h
gradient_boosting/data_transformer/: DataTransformer.cpp  DataTransformer.h
gradient_boosting/internal_data_container/: InternalDataContainer.cpp  InternalDataContainer.h
gradient_boosting/loss_functions/: GradientBoostingLossFunction.cpp  GradientBoostingLossFunction.h  GradientBoostingMSELossFunction.cpp  GradientBoostingMSELossFunction.h  GradientBoostingSplitInfo.cpp  GradientBoostingSplitInfo.h
gradient_boosting/trees/: GradientBoostingTree.cpp  GradientBoostingTree.h  GradientBoostingTreeOblivious.cpp  GradientBoostingTreeOblivious.h
utils/data_containers/: DataContainer.cpp  DataContainer.h  ElementContainer.cpp  ElementContainer.h
utils/io/: CSVReaderBase.cpp  CSVReaderBase.h  ResultDumper.cpp  ResultDumper.h  SimpleCSVReader.cpp  SimpleCSVReader.h
